--- a/shells/weapp/src/pages/index/index.wxml
+++ b/shells/weapp/src/pages/index/index.wxml
@@ -1,15 +1,12 @@
 <!--index.wxml-->
 <view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
+  <view bindtap="bindViewTap" class="userinfo" style="margin-bottom: 20rpx">
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
+  <button bindtap="toTodos" class="userinfo">Todos: {{ todos.length }}</button>
+
   <view class="usermotto">
-    <text class="user-motto">{{s}}</text>
-    <br />
     <text class="user-motto">{{motto}}</text>
   </view>
-  <block wx:for="{{todos.items}}" wx:for-item="todo" wx:key="*this">
-    <text class="log-item">{{index + 1}}. {{todo.content}}</text>
-  </block>
 </view>
